chore: 불필요 파일 무시 규칙 추가
- 파이썬 캐시와 가상환경 경로 무시
- 테스트 결과 디렉터리 무시
- Playwright MCP/Taskmaster 디렉터리 무시
- 백엔드 업로드 파일 무시

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,19 @@ dist-ssr
 .env.production.local
 .env.development.local
 
+# Python cache/venv
+__pycache__/
+*.pyc
+.pytest_cache/
+venv/
+
+# Test results
+test-results/
+frontend/test-results/
+
+# Tooling
+.playwright-mcp/
+.taskmaster/
+
+# Runtime uploads
+backend/uploads/
